--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.2.5",
     "antd": "^5.6.2",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "echarts": "^5.4.2",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
@@ -24,6 +25,7 @@
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.5.1",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "zustand": "^4.3.8"
   }
 }
