--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 13880",
     "lint": "next lint"
   },
   "dependencies": {
     "@binance-chain/bsc-connector": "^1.0.0",
-    "@ethersproject/providers": "^5.7.2",
+    "@ethersproject/providers": "^5.yarn7.2",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
