--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "antd": "^5.6.3",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "cos-nodejs-sdk-v5": "^2.12.4",
     "echarts": "^5.4.2",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
